--- a/index.css
+++ b/index.css
@@ -70,6 +70,8 @@
   max-width: 1440px;
   align-items: center;
   padding-top: var(--dl-space-space-fourunits);
+  padding-left: var(--dl-space-space-oneandhalfunits);
+  padding-right: var(--dl-space-space-unit);
   flex-direction: column;
   padding-bottom: var(--dl-space-space-sixunits);
   background-color: #eae7e2;
@@ -523,10 +525,8 @@
   }
   .home-caption1 {
     left: -82px;
-    right: 48px;
     bottom: -142px;
     height: auto;
-    position: absolute;
     font-size: 15px;
   }
   .home-button {
