--- a/team.css
+++ b/team.css
@@ -52,12 +52,10 @@
   left: 0px;
   width: 100%;
   height: 100vh;
-  display: flex;
+  display: none;
   padding: 32px;
   z-index: 100;
   position: fixed;
-  transform: translateX(100%);
-  transition: 0.5s;
   flex-direction: column;
   justify-content: space-between;
   background-color: #fff;
@@ -284,6 +282,13 @@
 }
  
 @media(max-width: 430px) {
+  .team-header1 {
+    overflow: hidden;
+  }
+  .team-navbar {
+    width: 430px;
+    overflow: hidden;
+  }
   .team-image1 {
     top: 27px;
     left: 27px;
