--- a/team.css
+++ b/team.css
@@ -145,11 +145,7 @@
   position: relative;
   max-width: 1440px;
   align-items: flex-start;
-  padding-top: 120px;
-  padding-left: var(--dl-space-space-fiveunits);
-  padding-right: var(--dl-space-space-fiveunits);
   flex-direction: column;
-  padding-bottom: var(--dl-space-space-threeunits);
 }
  
 .team-main {
@@ -294,7 +290,7 @@
     left: 27px;
   }
   .team-hero {
-    height: 1167px;
+    height: 1201px;
   }
   .team-image2 {
     top: 720px;
@@ -315,12 +311,20 @@
     top: 1222px;
     left: 205px;
   }
+  .team-footer {
+    height: 245px;
+    overflow: hidden;
+    padding-top: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-bottom: 0px;
+  }
   .team-main {
-    height: 228px;
+    height: 194px;
   }
   .team-logo {
-    top: 4px;
-    left: -36px;
+    left: 46px;
+    bottom: -59px;
     position: absolute;
   }
   .team-copyright {
@@ -329,8 +333,8 @@
     position: absolute;
   }
   .team-caption {
-    top: 166px;
-    left: 46px;
+    top: 72px;
+    left: 45px;
     position: absolute;
   }
   .team-header2 {
@@ -402,6 +406,7 @@
   }
   .team-footer {
     width: 100%;
+    height: 236px;
     overflow: hidden;
     padding-top: 0px;
     padding-left: 0px;
@@ -410,6 +415,7 @@
   }
   .team-main {
     height: 228px;
+    overflow: hidden;
   }
   .team-logo {
     left: 38px;
@@ -424,8 +430,8 @@
     position: absolute;
   }
   .team-caption {
-    top: 52px;
-    left: 40px;
+    top: 78px;
+    left: 37px;
     color: rgb(167, 135, 122);
     position: absolute;
   }
