--- a/team.css
+++ b/team.css
@@ -282,7 +282,7 @@
     overflow: hidden;
   }
   .team-navbar {
-    width: 430px;
+    width: 100%;
     overflow: hidden;
   }
   .team-image1 {
@@ -333,8 +333,8 @@
     position: absolute;
   }
   .team-caption {
-    top: 72px;
-    left: 45px;
+    top: 166px;
+    left: 46px;
     position: absolute;
   }
   .team-header2 {
@@ -347,8 +347,9 @@
     position: absolute;
   }
   .team-header4 {
-    top: 187px;
-    left: -108px;
+    top: 190px;
+    left: -1px;
+    width: 100%;
     position: absolute;
     font-size: 40px;
   }
@@ -368,14 +369,14 @@
     overflow: hidden;
   }
   .team-navbar {
-    width: 476px;
+    width: 100%;
     height: 85px;
     padding: var(--dl-space-space-unit);
     overflow: hidden;
   }
   .team-image1 {
     top: 26px;
-    left: 68px;
+    left: 31px;
   }
   .team-mobile-menu {
     padding: 16px;
@@ -414,7 +415,8 @@
     padding-bottom: 0px;
   }
   .team-main {
-    height: 228px;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
   }
   .team-logo {
