Commit from TeleportHQ

--- a/index.css
+++ b/index.css
@@ -498,6 +498,31 @@
   }
 }
  
+@media(max-width: 430px) {
+  .home-header1 {
+    overflow: hidden;
+  }
+  .home-navbar {
+    width: 100%;
+    overflow: hidden;
+  }
+  .home-image1 {
+    top: 31px;
+    left: 28px;
+  }
+  .home-caption1 {
+    left: -59px;
+    bottom: -204px;
+    font-size: 10px;
+  }
+  .home-header2 {
+    top: 170px;
+    left: -2px;
+    font-size: 35px;
+    max-width: 100%;
+  }
+}
+ 
 @media(max-width: 390px) {
   .home-header1 {
     overflow: hidden;
@@ -524,10 +549,10 @@
     padding-right: 0px;
   }
   .home-caption1 {
-    left: -82px;
-    bottom: -142px;
+    left: -55px;
+    bottom: -130px;
     height: auto;
-    font-size: 15px;
+    font-size: 10px;
   }
   .home-button {
     top: 282px;
@@ -540,7 +565,7 @@
   .home-header2 {
     top: 104px;
     right: 0px;
-    width: 377px;
+    width: 100%;
     height: auto;
     font-size: 35px;
     max-width: 100%;
