--- a/index.css
+++ b/index.css
@@ -74,6 +74,7 @@
   padding-right: var(--dl-space-space-unit);
   flex-direction: column;
   padding-bottom: var(--dl-space-space-sixunits);
+  justify-content: center;
   background-color: #eae7e2;
 }
  
@@ -108,23 +109,13 @@
   color: #573412;
 }
  
-.home-caption1 {
-  left: 817px;
-  color: rgb(87, 52, 18);
-  width: 252px;
-  bottom: 386px;
-  height: 44px;
-  display: block;
+.home-text14 {
+  top: 268px;
+  left: 823px;
+  color: #573412;
   position: absolute;
   font-size: 20px;
-  max-width: 800px;
-  align-self: flex-end;
-  font-style: normal;
-  text-align: center;
-  font-family: "Plus Jakarta Sans";
-  font-weight: 200;
-  line-height: 36px;
-  padding-bottom: 0px;
+  font-family: "Poppins";
 }
  
 .home-description1 {
@@ -180,15 +171,15 @@
   animation-timing-function: ease;
 }
  
-.home-text14 {
+.home-text15 {
   color: #573412;
 }
  
-.home-text16 {
+.home-text17 {
   color: #a7877a;
 }
  
-.home-text17 {
+.home-text18 {
   color: #573412;
 }
  
@@ -224,7 +215,7 @@
   animation-timing-function: ease;
 }
  
-.home-caption2 {
+.home-caption1 {
   top: 348px;
   left: 498px;
   color: rgb(87, 52, 18);
@@ -243,7 +234,7 @@
   padding-bottom: 0px;
 }
  
-.home-caption3 {
+.home-caption2 {
   top: 378px;
   left: 638px;
   color: rgb(87, 52, 18);
@@ -262,7 +253,7 @@
   padding-bottom: 0px;
 }
  
-.home-caption4 {
+.home-caption3 {
   top: 459px;
   left: 1176px;
   color: rgb(87, 52, 18);
@@ -281,7 +272,7 @@
   padding-bottom: 0px;
 }
  
-.home-caption5 {
+.home-caption4 {
   top: 429px;
   left: 895px;
   color: rgb(87, 52, 18);
@@ -359,7 +350,7 @@
   animation-timing-function: ease;
 }
  
-.home-text18 {
+.home-text19 {
   color: #573412;
 }
  
@@ -445,7 +436,7 @@
   color: rgb(87, 52, 18);
 }
  
-.home-caption6 {
+.home-caption5 {
   left: 0px;
   color: #a7877a;
   width: 249px;
@@ -520,11 +511,10 @@
     font-size: 35px;
     max-width: 100%;
   }
-  .home-caption1 {
-    top: 210px;
-    left: 160px;
-    right: 18px;
-    bottom: 339px;
+  .home-text14 {
+    top: 237px;
+    left: 223px;
+    position: absolute;
     font-size: 10px;
   }
   .home-image2 {
@@ -547,7 +537,7 @@
     width: 312px;
     bottom: 54px;
   }
-  .home-caption2 {
+  .home-caption1 {
     top: 609px;
     left: var(--dl-space-space-sixunits);
     color: rgb(87, 52, 18);
@@ -561,20 +551,20 @@
     line-height: 36px;
     padding-left: 0px;
   }
-  .home-caption3 {
+  .home-caption2 {
     top: 630px;
     left: 245px;
     right: -30px;
     width: 208px;
     font-size: 10px;
   }
-  .home-caption4 {
+  .home-caption3 {
     top: 693px;
     left: -1px;
     width: 112px;
     font-size: 10px;
   }
-  .home-caption5 {
+  .home-caption4 {
     top: 673px;
     left: -42px;
     color: rgb(87, 52, 18);
@@ -638,12 +628,6 @@
     height: auto;
     font-size: 35px;
     max-width: 100%;
-  }
-  .home-caption1 {
-    left: -55px;
-    bottom: -130px;
-    height: auto;
-    font-size: 10px;
   }
   .home-image2 {
     overflow: hidden;
