--- a/index.css
+++ b/index.css
@@ -270,27 +270,6 @@
   padding-bottom: 0px;
 }
  
-.home-header4 {
-  top: 869px;
-  left: 464px;
-  color: rgb(167, 135, 122);
-  width: 1006px;
-  position: absolute;
-  font-size: 50px;
-  max-width: auto;
-  font-style: normal;
-  text-align: center;
-  font-family: "Poppins";
-  font-weight: 600;
-  line-height: 108px;
-  animation-name: fadeInDown;
-  animation-delay: 0s;
-  animation-duration: 2s;
-  animation-direction: normal;
-  animation-iteration-count: 1;
-  animation-timing-function: ease;
-}
- 
 .home-image5 {
   top: 84px;
   right: -2px;
@@ -304,33 +283,6 @@
   animation-direction: normal;
   animation-iteration-count: 1;
   animation-timing-function: ease;
-}
- 
-.home-header5 {
-  top: 803px;
-  left: 450px;
-  color: rgb(255, 255, 255);
-  width: 1006px;
-  display: block;
-  overflow: hidden;
-  position: absolute;
-  font-size: 50px;
-  max-width: auto;
-  font-style: normal;
-  text-align: center;
-  font-family: "Poppins";
-  font-weight: 600;
-  line-height: 108px;
-  animation-name: fadeInDown;
-  animation-delay: 0s;
-  animation-duration: 2s;
-  animation-direction: normal;
-  animation-iteration-count: 1;
-  animation-timing-function: ease;
-}
- 
-.home-text18 {
-  color: #573412;
 }
  
 .home-navlink2 {
@@ -367,6 +319,54 @@
   bottom: 8px;
   height: 532px;
   position: absolute;
+}
+ 
+.home-header4 {
+  top: 869px;
+  left: 464px;
+  color: rgb(167, 135, 122);
+  width: 1006px;
+  position: absolute;
+  font-size: 50px;
+  max-width: auto;
+  font-style: normal;
+  text-align: center;
+  font-family: "Poppins";
+  font-weight: 600;
+  line-height: 108px;
+  animation-name: fadeInDown;
+  animation-delay: 0s;
+  animation-duration: 2s;
+  animation-direction: normal;
+  animation-iteration-count: 1;
+  animation-timing-function: ease;
+}
+ 
+.home-header5 {
+  top: 803px;
+  left: 450px;
+  color: rgb(255, 255, 255);
+  width: 1006px;
+  display: block;
+  overflow: hidden;
+  position: absolute;
+  font-size: 50px;
+  max-width: auto;
+  font-style: normal;
+  text-align: center;
+  font-family: "Poppins";
+  font-weight: 600;
+  line-height: 108px;
+  animation-name: fadeInDown;
+  animation-delay: 0s;
+  animation-duration: 2s;
+  animation-direction: normal;
+  animation-iteration-count: 1;
+  animation-timing-function: ease;
+}
+ 
+.home-text18 {
+  color: #573412;
 }
  
 .home-footer {
@@ -493,7 +493,6 @@
     line-height: 40px;
     animation-name: slideInLeft;
     animation-delay: 0s;
-    animation-duration: 3s;
     animation-direction: normal;
     animation-timing-function: ease;
   }
@@ -570,15 +569,34 @@
     right: -94px;
   }
   .home-video {
-    top: 190px;
-    left: 39px;
+    top: 113px;
+    left: 43px;
     width: 357px;
     height: 195px;
     overflow: hidden;
     position: absolute;
   }
+  .home-header4 {
+    top: 8px;
+    left: 159px;
+    width: auto;
+    position: absolute;
+    font-size: 35px;
+  }
+  .home-header5 {
+    top: 1px;
+    left: 26px;
+    width: auto;
+    height: auto;
+    position: absolute;
+    font-size: 25px;
+    line-height: 40px;
+  }
   .home-footer {
     overflow: hidden;
+  }
+  .home-copyright {
+    color: rgb(167, 135, 122);
   }
 }
  
