--- a/index.css
+++ b/index.css
@@ -32,11 +32,11 @@
   display: flex;
 }
  
-.home-navlink1 {
+.home-navlink {
   display: contents;
 }
  
-.home-image1 {
+.home-image10 {
   left: -162px;
   width: 53px;
   bottom: -6px;
@@ -113,7 +113,7 @@
   justify-content: center;
 }
  
-.home-image2 {
+.home-image11 {
   top: 90px;
   left: -2px;
   width: 360px;
@@ -162,7 +162,7 @@
   color: #573412;
 }
  
-.home-image3 {
+.home-image12 {
   right: -146px;
   width: 615px;
   bottom: 103px;
@@ -178,7 +178,7 @@
   animation-timing-function: ease;
 }
  
-.home-image4 {
+.home-image13 {
   left: -146px;
   width: 615px;
   bottom: 100px;
@@ -270,7 +270,7 @@
   padding-bottom: 0px;
 }
  
-.home-image5 {
+.home-image14 {
   top: 84px;
   right: -2px;
   width: 360px;
@@ -285,18 +285,6 @@
   animation-timing-function: ease;
 }
  
-.home-navlink2 {
-  top: 1000px;
-  left: 840px;
-  width: 245px;
-  bottom: 13px;
-  margin-top: 0px;
-  padding-left: var(--dl-space-space-halfunit);
-  margin-bottom: 0px;
-  padding-right: var(--dl-space-space-halfunit);
-  text-decoration: none;
-}
- 
 .home-description2 {
   gap: 120px;
   width: 100%;
@@ -309,8 +297,7 @@
   border-style: dashed;
   border-width: 0px;
   flex-direction: column;
-  padding-bottom: var(--dl-space-space-fiveunits);
-  justify-content: center;
+  justify-content: flex-end;
 }
  
 .home-video {
@@ -343,6 +330,28 @@
 }
  
 .home-header5 {
+  top: 194px;
+  left: var(--dl-space-space-unit);
+  color: rgb(255, 255, 255);
+  right: var(--dl-space-space-unit);
+  width: auto;
+  position: absolute;
+  font-size: 50px;
+  max-width: auto;
+  font-style: normal;
+  text-align: center;
+  font-family: "Poppins";
+  font-weight: 600;
+  line-height: 108px;
+  animation-name: fadeInDown;
+  animation-delay: 0s;
+  animation-duration: 2s;
+  animation-direction: normal;
+  animation-iteration-count: 1;
+  animation-timing-function: ease;
+}
+ 
+.home-header6 {
   top: 803px;
   left: 450px;
   color: rgb(255, 255, 255);
@@ -365,8 +374,38 @@
   animation-timing-function: ease;
 }
  
-.home-text18 {
+.home-text22 {
   color: #573412;
+}
+ 
+.home-image15 {
+  width: 200px;
+  object-fit: cover;
+}
+ 
+.home-image16 {
+  width: 200px;
+  object-fit: cover;
+}
+ 
+.home-link1 {
+  display: contents;
+}
+ 
+.home-image17 {
+  width: 200px;
+  object-fit: cover;
+  text-decoration: none;
+}
+ 
+.home-link2 {
+  display: contents;
+}
+ 
+.home-image18 {
+  width: 200px;
+  object-fit: cover;
+  text-decoration: none;
 }
  
 .home-footer {
@@ -432,7 +471,7 @@
   text-decoration: none;
 }
  
-.home-image6 {
+.home-image19 {
   width: 100px;
   object-fit: cover;
 }
@@ -441,7 +480,7 @@
   text-decoration: none;
 }
  
-.home-image7 {
+.home-image20 {
   width: 100px;
   object-fit: cover;
 }
@@ -466,7 +505,7 @@
     width: 100%;
     overflow: hidden;
   }
-  .home-image1 {
+  .home-image10 {
     top: 31px;
     left: 28px;
   }
@@ -505,7 +544,7 @@
   .home-text13 {
     color: #573412;
   }
-  .home-image2 {
+  .home-image11 {
     top: -6px;
     left: -95px;
   }
@@ -515,12 +554,12 @@
     font-size: 30px;
     font-family: Poppins;
   }
-  .home-image3 {
+  .home-image12 {
     right: -77px;
     width: 317px;
     bottom: 97px;
   }
-  .home-image4 {
+  .home-image13 {
     left: -35px;
     width: 312px;
     bottom: 54px;
@@ -564,13 +603,16 @@
     line-height: 36px;
     margin-right: 0px;
   }
-  .home-image5 {
+  .home-image14 {
     top: 58px;
     right: -94px;
   }
+  .home-description2 {
+    height: 713px;
+  }
   .home-video {
-    top: 113px;
-    left: 43px;
+    top: 111px;
+    left: 37px;
     width: 357px;
     height: 195px;
     overflow: hidden;
@@ -584,6 +626,23 @@
     font-size: 35px;
   }
   .home-header5 {
+    top: 428px;
+    left: 25px;
+    width: 378px;
+    position: absolute;
+    font-size: 30px;
+    font-family: Poppins;
+  }
+  .home-text18 {
+    color: #573412;
+  }
+  .home-text20 {
+    color: #a7877a;
+  }
+  .home-text21 {
+    color: #573412;
+  }
+  .home-header6 {
     top: 1px;
     left: 26px;
     width: auto;
@@ -591,6 +650,34 @@
     position: absolute;
     font-size: 25px;
     line-height: 40px;
+  }
+  .home-image15 {
+    left: 75px;
+    width: 100px;
+    bottom: 89px;
+    height: 100px;
+    position: absolute;
+    border-radius: 80%;
+  }
+  .home-image16 {
+    left: 249px;
+    width: 100px;
+    bottom: 87px;
+    height: 100px;
+    position: absolute;
+    border-radius: 80%;
+  }
+  .home-image17 {
+    left: 110px;
+    width: 25px;
+    bottom: 45px;
+    position: absolute;
+  }
+  .home-image18 {
+    left: 287px;
+    width: 25px;
+    bottom: 45px;
+    position: absolute;
   }
   .home-footer {
     overflow: hidden;
@@ -610,7 +697,7 @@
     padding: var(--dl-space-space-unit);
     overflow: hidden;
   }
-  .home-image1 {
+  .home-image10 {
     top: 28px;
     left: 54px;
     width: 42px;
@@ -641,31 +728,27 @@
     font-size: 35px;
     max-width: 100%;
   }
-  .home-image2 {
+  .home-image11 {
     overflow: hidden;
   }
   .home-header3 {
     top: 5px;
     right: 56px;
   }
-  .home-image3 {
+  .home-image12 {
     top: 586px;
     left: 54px;
     overflow: hidden;
   }
-  .home-image4 {
+  .home-image13 {
     overflow: hidden;
   }
-  .home-image5 {
+  .home-image14 {
     overflow: hidden;
   }
-  .home-navlink2 {
-    top: 282px;
-    left: 61px;
-    width: 276px;
-    position: absolute;
-    padding-left: var(--dl-space-space-halfunit);
-    padding-right: var(--dl-space-space-unit);
+  .home-header5 {
+    top: 5px;
+    right: 56px;
   }
   .home-footer {
     width: 100%;
