--- a/index.css
+++ b/index.css
@@ -97,6 +97,20 @@
   line-height: 108px;
 }
  
+.home-header3 {
+  top: 178px;
+  color: rgb(255, 255, 255);
+  right: -4px;
+  width: 100%;
+  position: absolute;
+  font-size: 90px;
+  max-width: auto;
+  text-align: center;
+  font-family: "Poppins";
+  font-weight: 700;
+  line-height: 108px;
+}
+ 
 .home-description1 {
   gap: 120px;
   width: 100%;
@@ -128,7 +142,7 @@
   animation-timing-function: ease;
 }
  
-.home-header3 {
+.home-header4 {
   top: 194px;
   left: var(--dl-space-space-unit);
   color: rgb(255, 255, 255);
@@ -150,15 +164,15 @@
   animation-timing-function: ease;
 }
  
-.home-text14 {
+.home-text13 {
   color: #573412;
 }
  
-.home-text16 {
+.home-text15 {
   color: #a7877a;
 }
  
-.home-text17 {
+.home-text16 {
   color: #573412;
 }
  
@@ -308,7 +322,7 @@
   position: absolute;
 }
  
-.home-header4 {
+.home-header5 {
   top: 869px;
   left: 464px;
   color: rgb(167, 135, 122);
@@ -329,7 +343,7 @@
   animation-timing-function: ease;
 }
  
-.home-header5 {
+.home-header6 {
   top: 194px;
   left: var(--dl-space-space-unit);
   color: rgb(255, 255, 255);
@@ -351,7 +365,7 @@
   animation-timing-function: ease;
 }
  
-.home-header6 {
+.home-header7 {
   top: 803px;
   left: 450px;
   color: rgb(255, 255, 255);
@@ -372,10 +386,6 @@
   animation-direction: normal;
   animation-iteration-count: 1;
   animation-timing-function: ease;
-}
- 
-.home-text22 {
-  color: #573412;
 }
  
 .home-image15 {
@@ -495,6 +505,11 @@
     max-width: 70%;
     line-height: 43px;
   }
+  .home-header3 {
+    font-size: 36px;
+    max-width: 70%;
+    line-height: 43px;
+  }
 }
  
 @media(max-width: 430px) {
@@ -522,6 +537,23 @@
     animation-duration: 2s;
   }
   .home-header2 {
+    top: 223px;
+    left: 241px;
+    color: #573412;
+    width: 104px;
+    position: absolute;
+    font-size: 45px;
+    max-width: 100%;
+    text-align: left;
+    font-family: Poppins;
+    font-weight: 700;
+    line-height: 40px;
+    animation-name: slideInLeft;
+    animation-delay: 0s;
+    animation-direction: normal;
+    animation-timing-function: ease;
+  }
+  .home-header3 {
     top: 61px;
     left: 161px;
     width: 104px;
@@ -541,14 +573,11 @@
   .home-text12 {
     color: #a7877a;
   }
-  .home-text13 {
-    color: #573412;
-  }
   .home-image11 {
     top: -6px;
     left: -95px;
   }
-  .home-header3 {
+  .home-header4 {
     top: 509px;
     left: -4px;
     font-size: 30px;
@@ -618,14 +647,19 @@
     overflow: hidden;
     position: absolute;
   }
-  .home-header4 {
+  .home-header5 {
     top: 8px;
     left: 159px;
+    color: rgb(167, 135, 122);
     width: auto;
     position: absolute;
     font-size: 35px;
+    font-style: normal;
+    font-family: Poppins;
+    font-weight: 600;
+    line-height: 108px;
   }
-  .home-header5 {
+  .home-header6 {
     top: 428px;
     left: 25px;
     width: 378px;
@@ -633,23 +667,27 @@
     font-size: 30px;
     font-family: Poppins;
   }
-  .home-text18 {
+  .home-text17 {
     color: #573412;
   }
-  .home-text20 {
+  .home-text18 {
     color: #a7877a;
   }
-  .home-text21 {
+  .home-text19 {
     color: #573412;
   }
-  .home-header6 {
+  .home-header7 {
     top: 1px;
     left: 26px;
     width: auto;
     height: auto;
     position: absolute;
     font-size: 25px;
+    font-family: Poppins;
     line-height: 40px;
+  }
+  .home-text20 {
+    color: #573412;
   }
   .home-image15 {
     left: 75px;
@@ -728,10 +766,18 @@
     font-size: 35px;
     max-width: 100%;
   }
+  .home-header3 {
+    top: 104px;
+    right: 0px;
+    width: 100%;
+    height: auto;
+    font-size: 35px;
+    max-width: 100%;
+  }
   .home-image11 {
     overflow: hidden;
   }
-  .home-header3 {
+  .home-header4 {
     top: 5px;
     right: 56px;
   }
@@ -746,7 +792,7 @@
   .home-image14 {
     overflow: hidden;
   }
-  .home-header5 {
+  .home-header6 {
     top: 5px;
     right: 56px;
   }
