--- a/index.css
+++ b/index.css
@@ -641,6 +641,7 @@
     height: 195px;
     overflow: hidden;
     position: absolute;
+    border-radius: 20px;
   }
   .home-header5 {
     top: 8px;
